--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "build-example"
+name = "rust_serial"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# Note: header file generation happens in build.rs
+[lib]
+name = "rust_serial"
+crate-type = ["staticlib"]
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 embedded-hal = "0.2.7"
@@ -15,3 +19,6 @@ cortex-m-rt = "0.7.3"
 panic-halt = "0.2.0"
 unwrap-infallible = "0.1.5"
 stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103"] }
+
+[build-dependencies]
+cbindgen = "0.24.3"
